--- a/lab2/lab1.2.css
+++ b/lab2/lab1.2.css
@@ -1,7 +1,22 @@
-table {width: 100%}
-td {text-align: center;
-padding: 15px}
-img {width: 300px}
-tbody {background-color: red}
-thead {background-color: blue}
-tfoot {background-color: green}
+table {
+    width: 100%
+}
+td {
+    text-align: center;
+padding: 15px
+}
+img {
+    width: 300px
+}
+tbody {
+    background-color: red
+}
+thead {
+    background-color: blue
+}
+tfoot {
+    background-color: green
+}
+iframe {
+    width: 600px
+}
