--- a/lab2/style.css
+++ b/lab2/style.css
@@ -1,10 +1,8 @@
 body {
   background-color: lightgrey;
 }
-.btn-secondary {
-  background-color: #343a40;
-  border: 0;
-  margin-left: -13px;
+header {
+  margin-right: -50px;
 }
 .cards {
   display: flex;
@@ -23,5 +21,34 @@ body {
 }
 .media > img {
   height: 200px;
+}
+form {
+  margin: 50px;
+}
+.cards2 {
+  display: block;
+  flex-wrap: wrap;
+}
+.cards2 .card {
+  display: inline-block;
+  margin: 44px;
+}
+.cards2 .card img {
+  border-radius: 2.5%;
+}
+.names {
+  margin: 50px;
+  padding-bottom: 100px;
+}
+.names .names1 {
+  background-color: grey;
+  margin-bottom: 0;
+}
+.names .names2 {
+  background-color: dimgray;
+  margin-bottom: 0;
+}
+footer {
+  margin: 50px;
 }
 /*# sourceMappingURL=style.css.map */
