--- a/lab2/style.less
+++ b/lab2/style.less
@@ -1,10 +1,8 @@
 body {
     background-color: lightgrey;
 }
-.btn-secondary {
-  background-color: #343a40;
-  border: 0;
-  margin-left: -13px;
+header {
+  margin-right: -50px;
 }
 .cards {
   display: flex;
@@ -23,4 +21,37 @@ body {
   >img {
     height: 200px;
   }
+}
+form {
+  margin: 50px;
+}
+.cards2 {
+  display: block;
+  flex-wrap: wrap;
+
+  .card {
+    display: inline-block;
+    margin: 44px;
+  img {
+    border-radius: 2.5%;
+  }
+  }
+}
+.names {
+  margin: 50px;
+  padding-bottom: 100px;
+
+  .names1 > {
+    background-color: grey;
+    margin-bottom: 0;
+    //margin: 50px 50px 0 50px;
+  }
+
+  .names2 {
+    background-color: dimgray;
+    margin-bottom: 0;
+  }
+}
+footer {
+  margin: 50px;
 }
