--- a/lab2/123/style2.css
+++ b/lab2/123/style2.css
@@ -1,7 +1,8 @@
 body {
-  background-color: cadetblue; }
+  background-color: aqua; }
   body .qwe {
     color: bisque;
     border: 1px solid red;
     height: 200px; }
+
 /*# sourceMappingURL=style2.css.map */
