--- a/lab2/style.sass
+++ b/lab2/style.sass
@@ -1,2 +1,9 @@
-body
+.form-wrapper
+  display: flex
+  flex-direction: column
+  max-width: 300px
+
+#submitRegistration
   background-color: yellow
+  margin-top: 20px
+  padding: 10px
