--- a/lab2/style.css
+++ b/lab2/style.css
@@ -1,4 +1,11 @@
-body {
-  background-color: white; }
+.form-wrapper {
+  display: flex;
+  flex-direction: column;
+  max-width: 300px; }
+
+#submitRegistration {
+  background-color: yellow;
+  margin-top: 20px;
+  padding: 10px; }
 
 /*# sourceMappingURL=style.css.map */
